--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.h2database', name: 'h2', version: '1.3.148'
+    testCompile("org.assertj:assertj-core:3.11.1")
 }
